--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,8 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* Make all h1 elements have classname text-2xl */
+h1 {
+  @apply text-6xl;
+}
